# realtime-fraud-pyspark-eks-sagemaker

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.ps1
config/: config.yaml
docs/: SPRINT_1_GUIDE.md  SPRINT_OVERVIEW.md
producer/: __init__.py  config.py  data_generator.py  kinesis_producer.py  main.py
scripts/: setup_localstack.py
tests/: __init__.py  test_producer.py
